# traitenum

./: COPYING.txt  Cargo.toml  README.md  build.rs
cargo/: Cargo.toml
cargo/design/poc/assets/: derive_Cargo.toml.template  derive_lib.rs.template  derive_test_mytrait.rs.template  lib_Cargo.toml.template  lib_lib.rs.template  workspace_Cargo.toml.template
cargo/src/: cli.rs  cmd.rs  lib.rs  main.rs  meta.rs
cargo/src/cmd/: add.rs  enumtrait.rs  new.rs  workspace.rs
cargo/src/cmd/enumtrait/: add.rs  remove.rs
cargo/src/cmd/workspace/: init.rs  new.rs
docs/: Roadmap.md
docs/design/v0/: README.md
docs/design/v1/: README.md
lib/: Cargo.toml
lib/src/: error.rs  gen.rs  lib.rs  macros.rs  model.rs  parse.rs
lib/src/macros/: enumtrait.rs  traitenum.rs
lib/src/model/: parse.rs  token.rs
macro/: Cargo.toml
macro/src/: lib.rs
macro/tests/: sample-usage.rs
src/: lib copy.rs  lib.rs  model.rs
testcrate/: Cargo.toml
testcrate/src/: lib.rs
tests/: sample-usage.rs
tests-crate/exporter/: Cargo.toml
tests-crate/exporter-heavy/: Cargo.toml
tests-crate/exporter-heavy/lib/: Cargo.toml
tests-crate/exporter-heavy/macro/: Cargo.toml
tests-crate/exporter/src/: lib.rs
tests-crate/importer/: Cargo.toml
tests-crate/importer-heavy/: Cargo.toml
tests-crate/importer-heavy/src/: lib.rs
tests-crate/importer/src/: lib.rs
tests/exporter/lib/: Cargo.toml
tests/exporter/macro/: Cargo.toml
tests/exporter/macrolib/: Cargo.toml
tests/exporter/macrolib/src/: lib.rs
tests/exporter/traits/: Cargo.toml
tests/importer/: Cargo.toml
(+14 files in other folders)
