[package]
name = "traitenum-cargo"
authors = ["Asmov LLC"]
description = "Cargo subcommands to generate traitenum traits and derive macros"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"
escargot = "0.5.8"
syn = { version = "2.0.39", features = ["full"] }
thiserror = "1.0.50"
