[package]
name = "traitenum-test-exporter-macrolib"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
traitenum-lib = { version = "0.1.0", path = "../../../lib" }
traitenum-test-exporter-traits = { version = "0.1.0", path = "../traits" }

